--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,8 +14,11 @@
         android:theme="@style/Theme.Quiztusan"
         tools:targetApi="31">
         <activity
+            android:name=".presentation.result.ResultActivity"
+            android:exported="false" />
+        <activity
             android:name=".presentation.quiz.QuizActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -24,8 +27,7 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="true">
-        </activity>
+            android:exported="true"></activity>
     </application>
 
 </manifest>
